# kitodar

./: Dockerfile  README.md  base.yml  deployment.yml  newConfig.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: user.rs
backend/src/repository/: kub.rs  mod.rs
common/src/model/: user.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
