[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6"
env_logger = "0.10.0"
serde = { version = "1.0.189", features = ["derive"] }
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
log = "0.4.20"
derive_more = "0.99.17"
common = { path = "../common" }
actix-web-lab = { version = "0.20.0", features = ["spa"] }
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }