[workspace]
[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
log = "0.4.6"
wasm-logger = "^0.2"
common = { path="../common" }
patternfly-yew = { version = "0.5.0-alpha.3", features = ["icons-fab", "tree"] }